# pico_NVMe

./: CMakeLists.txt  README.md  main.c
python-tests/: requirements.txt  test_firmware.py
